--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Items</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
 Список товаров:
 <ol>
     {% for item in items %}
-    <li><a href="/item/{{ item.id }}"> {{ item.name }} </a></li>
+    <li class="item-card"> <a href="/item/{{ item.id }}"> {{ item.name }} </a></li>
     {% endfor %}
 </ol>
 </body>
