--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -10,8 +10,12 @@
 Список товаров:
 <ol>
     {% for item in items %}
-    <li class="item-card"> <a href="/item/{{ item.id }}"> {{ item.name }} </a></li>
+    <li class="item-card"><a href="{% url 'item-page' item.id %}"> {{ item.name }} </a></li>
     {% endfor %}
 </ol>
+<a href="{% url 'home' %}"> Home</a>
+
+{% include 'inc/inc-footer.html' %}
+
 </body>
 </html>
